--- a/t6.css
+++ b/t6.css
@@ -1,19 +1,22 @@
+		body{
+			margin-left: 0;
+			margin-right: 0;
+		}
 		header.top{
 			position: fixed;
-			top:0px;
-			height: 50px;
+			top: 0;
 			width: 100vw;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 50px;
 			background-color: #68cdd5;
 		}
 		div.center{
-			display: inline-block;
-			position: absolute;
-			top:50%;
-			left: 50%;
-			transform:translate(-50%,-50%);
+			margin: 0 auto;
+			line-height: 45px;
 			background-color: #55a8b3;
 			border-radius: 10px;
-			line-height: 45px;
 		}
 		div.left,div.right{
 			display: inline-block;
@@ -30,14 +33,14 @@
 			background-color: white;
 			color: #68cdd5;
 		}
-		.gps_icon,.edit_icon{
+		.dgps_icon,.edit_icon,.rili_icon,.gps_icon{
+			display: inline-block;
 			background: url(./images/spr_t6.png);
 		}
-		.gps_icon{
-			position: absolute;
-			right: 10px;
-			top:50%;
-			transform: translateY(-50%) scale(0.7,0.7);
+		.dgps_icon{
+			position: fixed;
+			right: 5px;
+			transform: scale(0.7,0.7);
 			width: 42px;
 			height: 44px;
 			background-position: -44px -171px;
@@ -48,10 +51,57 @@
 			background-position:0px 0px;
 			transform:scale(0.6,0.6);	
 		}
+		.rili_icon{
+			width: 24px;
+			height: 24px;
+			margin-right:10px;
+			background-position: -95px 0px;
+		}
+		.gps_icon{
+			width: 19px;
+			height: 23px;
+			margin-right:15px;
+			background-position: -95px -26px; 
+		}
+		main{
+			margin-top: 50px;
+			overflow: scroll;
+		}
+		div.box{
+			height: 85px;
+			padding: 15px 10px;
+			border-bottom:black solid 1px;
+		}
+		div.boxend{
+			margin-bottom: 100px;
+		}
+		div.box>div{
+			display: flex;
+			align-items: center;
+			height: 33%;
+		}
+		div.date,div.location{
+			color: #C0C0C0;
+		}
+		div.content{
+			padding-left: 34px;
+			overflow: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+		}
+		div.content>.side{
+			margin-left: auto;
+			display: inline-block;
+			color: red;
+		}
+		.list{
+			height: 50px;
+			background:	#C0C0C0;
+		}
 		footer{
 			position: fixed;
+			bottom: 0;
 			display: flex;
-			bottom: 0px;
 			width: 100%;
 			height: 60px;
 			border-top: 1px solid black;
@@ -60,6 +110,6 @@
 			background-color: #f8fafb;
 		}
 		footer div.ftcenter{
-			width: 57px;
-			height: 57px;
+			margin-left: 30px;
+			margin-right: 30px;
 		}
